# product-price-tracker

./: .coverage  .env.example  .gitignore  .releaserc.json  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml  publish.yml  semantic-release.yaml
docker/: Dockerfile
scripts/: pg_tables.sql
src/: main.py
src/config/: config.py
src/database/: database.py
src/models/: price.py  product.py
src/routes/: health.py  prices.py  products.py
src/schemas/: prices.py  products.py
tests/: conftest.py  test_products.py
tests/test_prices/: conftest.py  test_prices.py
tests/test_products/: conftest.py  test_products.py
