[project]
name = "product-price-tracker"
version = "0.0.1"
description = "Backend FastAPI implementation of a product price tracker."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name = "Kaz Mosahebi", email = "kas.mosahebi@gmail.com"}
]

dependencies = [
    "fastapi>=0.135.1",
    "psycopg[binary]>=3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pip-audit>=2.7",
    "bandit>=1.9.4",
]

[project.urls]
Homepage = "https://github.com/Static7424/product-price-tracker"
Repository = "https://github.com/Static7424/product-price-tracker"
Issues = "https://github.com/Static7424/product-price-tracker/issues"

[tool.ruff]
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/.venv/*",
    "*/__init__.py",
]
